tests/reference/ast-esub1-15eb690.stderr
input:1:15 syntax error: token type 'identifier' is unexpected here
subroutine g() r
              ^
Parsing error: syntax error
